5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4193/executions/1667_2968.log
== TEST (2019-04-16 16:13:29) 
-- CODE:
s=input("qual a quantidade de salgados?")
refrigerante=("qual a quantidade?")
if (s+)
-- ERROR:
File "XXXX", line 3
    if (s+)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:32) 
-- CODE:
s=input("qual a quantidade de salgados?")
refrigerante=input("qual a quantidade?")
if (s+refrigerante)

-- ERROR:
File "XXXX", line 3
    if (s+refrigerante)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:40) 
-- CODE:
s=input("qual a quantidade de salgados?")
refrigerante=input("qual a quantidade?")


-- ERROR:
File "XXXX", line 3
    if (s+refrigerante)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:26) 
-- CODE:
s=float(input("qual a quantidade de salgados?")
refrigerante=float(input("qual a quantidade?")
						 


-- ERROR:
File "XXXX", line 2
    refrigerante=float(input()
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:40) 
-- CODE:
s=int(input("qual a quantidade de salgados?")
refrigerante=int(input("qual a quantidade?")
						 


-- ERROR:
File "XXXX", line 2
    refrigerante=int(input()
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:53) 
-- CODE:
s=(input("qual a quantidade de salgados?")
refrigerante=(input("qual a quantidade?")
						 


-- ERROR:
File "XXXX", line 2
    refrigerante=(input()
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:02) 
-- CODE:
s=input("qual a quantidade de salgados?")
refrigerante=input("qual a quantidade?")
						 


-- ERROR:
File "XXXX", line 2
    refrigerante=(input()
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:43) 
-- CODE:
s=int(input("qual a quantidade de salgados?"))
refrigerante=int(input("qual a quantidade?"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:11) 
-- CODE:
l=int(input("qual a quantidade de salgados?"))
refrigerante=int(input("qual a quantidade?"))
print(round(l,refrigerante , 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:28) 
-- CODE:
l=int(input("qual a quantidade de salgados?"))
refrigerante=int(input("qual a quantidade?"))
print(round(l,refrigerante , 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:51) 
-- CODE:
l=int(input("qual a quantidade de salgados?"))
refrigerante=int(input("qual a quantidade?"))
print(round(l,refrigerante , 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:51) 
-- CODE:
refrigerante=int(input("qual a quantidade?"))
lanches=int(input("qual a quantidade ?"))
if (l==lanches):
   mensagem = lanche
else:
	mensagem = salgado
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    refrigerante=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:11) 
-- CODE:
refrigerante=int(input("qual a quantidade?"))
lanches=int(input("qual a quantidade ?"))
if (l==lanches):
   mensagem = lanche
else:
	mensagem = salgado
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    refrigerante=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:23) 
-- CODE:
refrigerante=int(input("qual a quantidade?"))
lanches=int(input("qual a quantidade ?"))
if (l=lanches):
   mensagem = lanche
else:
	mensagem = salgado
print(mensagem)



-- ERROR:
File "XXXX", line 3
    if (l=lanches):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:48) 
-- CODE:
refrigerante=int(input("qual a quantidade?"))
lanches=int(input("qual a quantidade ?"))
if ("l"==lanches):
   mensagem = lanche
else:
	mensagem = salgado
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    refrigerante=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:42) 
-- CODE:
refrigerante=int(input("qual a quantidade?"))
lanches=int(input("qual a quantidade ?"))
if ("l"==lanches):
   mensagem = "lanches"
else:
	mensagem = "salgado"
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    refrigerante=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:47:48) 
-- CODE:
refrigerante=int(input("qual a quantidade?"))
lanches=int(input("qual a quantidade ?"))
if ("l"==lanches):
   mensagem = "lanches"
else:
	mensagem = "salgado"
print(mensagem)



-- EXECUTION TIME:
0.160615
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 1, in <module>
    refrigerante=int(input())
ValueError: invalid literal for int() with base 10: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:58) 
-- CODE:
refrigerante=int(input("qual a quantidade?"))
lanches=int(input("qual a quantidade ?"))
if ("l"==lanches):
   mensagem = "lanches"
else:
	mensagem = "salgado"
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    refrigerante=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:52) 
-- CODE:
refrigerante=int(input("qual a quantidade?"))
lanches=int(input("qual a quantidade ?"))
if ("l"=lanches):
   mensagem = "lanches"
else:
	mensagem = "salgado"
print(mensagem)



-- ERROR:
File "XXXX", line 3
    if ("l"=lanches):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:25) 
-- CODE:
refrigerante=int(input("qual a quantidade?"))
lanches=int(input("qual a quantidade ?"))
if ("l"==lanches,"s"==salgados):
   mensagem = "lanches"
else:
	mensagem = "salgado"
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    refrigerante=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:35) 
-- CODE:
refrigerante=int(input("qual a quantidade?"))
lanches=int(input("qual a quantidade ?"))
if ("l"==lanches,"s"==salgados):
   mensagem = "lanches"
else:
	mensagem = "salgado"
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    refrigerante=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:49) 
-- CODE:
refrigerante=int(input("qual a quantidade?"))
lanches=int(input("qual a quantidade ?"))
if ("l"==lanches):
   mensagem = "lanches"
else:
	mensagem = "salgado"
print(mensagem)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    refrigerante=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
